task word-wrap fix

--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -12,8 +12,6 @@ $base-color-done: rgba(210, 210, 210, 0.35);
   display: flex;
   justify-content: space-between;
   transition: 0.5s;
-  height: 1.3rem;
-  opacity: 1;
 
   svg{
     transition: 0.5s;
